# VRC_Chatbox_OSC

./: .env  .gitignore  osc.py  pyproject.toml  readme.md  requirements.txt
